small fix for magins on smaller screen sizes! hrefs should now bring you to a new tab

--- a/style.css
+++ b/style.css
@@ -83,9 +83,16 @@ p{
 
 img{
   display: block;
-  width: 25%;
+  width: 50vw;
   height: auto;
   max-width: 100%;
+  margin: 20px 0px;
+}
+
+@media (max-width: 800px){
+  img{
+    width: 100%;
+  }
 }
 
 html {
@@ -325,6 +332,7 @@ height: 100%;
 @media (max-width: 800px){
   .embed-container { 
     position: relative; 
+    padding-top: 80px;
     padding-bottom: 76.25%; 
     height: 0; 
     overflow: hidden; 
